# fastapi-multidatabase-scaffolding

./: .env.example  .gitignore  CONFIGURATION.md  README.md  pyproject.toml  requirements.md  requirements.txt  setup_env.py  start.sh
app/: main.py
app/api/: dependencies.py  router.py
app/api/dependencies/: __init__.py  auth.py  db.py  permissions.py
app/api/docs/: openapi_docs.py
app/api/middlewares/: rate_limit.py  role_middleware.py
app/api/routes/: auth.py  notes.py  roles.py  users.py
app/core/: config.py  logging.py  permissions.py  security.py
app/db/: adapters.py  admin_initializer.py  base.py  connections.py  initializer.py  schema_registry.py
app/db/mongodb/: adapter.py
app/db/mysql/: adapter.py  session.py
app/models/: notes.py  permissions.py  users.py
app/schemas/: users.py
app/scripts/: README.md  clear_roles.py  create_postgres_db.py  init_db.py  init_mongodb.py  init_postgres.py  init_sqlserver.py  init_tables.sql  test_api.py  test_mongodb_api.py  test_mongodb_integration.py  test_rbac.py  test_sqlserver_api.py
app/tests/: test_mongodb_integration.py  test_notes_mongodb.py  test_rbac.py  test_role_api.py
docker/: Dockerfile  docker-compose.yml  mongo-init.js  mongodb-init.js  mongodb-init.sh  setup-odbc.sh  start.sh
docs/: README.md  architecture.md  database_integration.md  docker_setup.md  local_setup.md  mongodb_troubleshooting.md  multi_database_support.md  onboarding_new_model.md  package_management.md  rbac_configuration.md  rbac_integration.md  router_utils.md  sqlserver_issues_summary.md  sqlserver_uuid_troubleshooting.md
tests/: test_api_middlewares_rate_limit.py  test_api_routes_auth.py  test_api_routes_users.py  test_core_config.py  test_core_logging.py  test_core_security.py  test_db_base.py  test_db_mongodb.py  test_db_mysql.py  test_db_postgres.py  test_main.py  test_models_users.py  test_schemas_users.py
(+54 files in other folders)
